--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - mongo
     environment:
-      - MONGO_CONNECTION_URL=mongodb://mongo:27017/rms
+      - MONGO_CONNECTION_URL=${MONGO_CONNECTION_URL}
     volumes:
       - .:/app
     command: npm run start:prod
